# gpterm

./: Cargo.toml  README.md  release.sh
.github/workflows/: create-release.yml  push.yml  release.yml
src/: args.rs  configuration.rs  controller.rs  main.rs
