[package]
name = "gpterm"
version = "1.2.3"
edition = "2021"
authors = ["Frikk Herding <frikksol@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to use chat-GPT from the comfort of your terminal"
readme = "README.md"
homepage = "https://github.com/frikksol/gpterm"
repository = "https://github.com/frikksol/gpterm"
keywords = ["cli", "chat-gpt", "ai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
chatgpt_rs = "1.1.7"
tokio = { version = "1", features = ["full"] }
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
loading = "0.3.0"